--- a/package.json
+++ b/package.json
@@ -62,6 +62,11 @@
     "@parrino/cordova-plugin-local-notifications": "^1.0.1",
     "@types/ace": "^0.0.52",
     "@types/url-parse": "^1.4.11",
+    "@xml-tools/ast": "^5.0.5",
+    "@xml-tools/constraints": "^1.1.1",
+    "@xml-tools/parser": "^1.0.11",
+    "@xml-tools/simple-schema": "^3.0.5",
+    "ace-code": "^1.32.3",
     "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "cordova-android": "^10.1.2",
@@ -82,6 +87,8 @@
     "cordova-plugin-system": "file:src/plugins/system",
     "cordova-plugin-vibration": "^3.1.1",
     "css-loader": "^6.10.0",
+    "htmlhint": "^1.1.4",
+    "luaparse": "latest",
     "mini-css-extract-plugin": "^2.7.7",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.35",
@@ -91,23 +98,9 @@
     "raw-loader": "^4.0.2",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
+    "showdown": "latest",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-search": "^0.13.0",
-    "xterm-addon-web-links": "^0.9.0",
-    "xterm-addon-webgl": "^0.16.0",
-
-    "@xml-tools/ast": "^5.0.5",
-    "@xml-tools/constraints": "^1.1.1",
-    "@xml-tools/parser": "^1.0.11",
-    "@xml-tools/simple-schema": "^3.0.5",
-    "ace-code": "^1.32.3",
     "vscode-css-languageservice": "^6.2.6",
     "vscode-html-languageservice": "^5.0.6",
     "vscode-json-languageservice": "^5.3.5",
@@ -116,15 +109,21 @@
     "vscode-languageserver-textdocument": "^1.0.8",
     "vscode-languageserver-types": "^3.17.3",
     "vscode-ws-jsonrpc": "^2.0.1",
-    "htmlhint": "^1.1.4",
-    "luaparse": "latest",
-    "showdown": "latest"
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-search": "^0.13.0",
+    "xterm-addon-web-links": "^0.9.0",
+    "xterm-addon-webgl": "^0.16.0"
   },
   "dependencies": {
     "@deadlyjack/ajax": "^1.2.6",
     "@ungap/custom-elements": "^1.3.0",
     "admob-plus-cordova": "1.28.0",
     "autosize": "^6.0.1",
+    "awesome-notifications": "^3.1.3",
     "cordova": "12.0.0",
     "core-js": "^3.35.1",
     "crypto-js": "^4.2.0",
