--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "sh utils/scripts/start.sh",
     "clean": "sh utils/scripts/clean.sh android android@10",
     "plugin": "sh utils/scripts/plugin.sh",
-    "setup": "node ./utils/setup.js"
+    "setup": "node ./utils/setup.js",
+    "ionic:serve": "webpack serve"
   },
   "keywords": [
     "ecosystem:cordova"
@@ -76,7 +77,7 @@
     "cordova-plugin-browser": "file:src/plugins/browser",
     "cordova-plugin-browsersync-gen2": "^1.1.7",
     "cordova-plugin-buildinfo": "^4.0.0",
-    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-ftp": "file:src/plugins/ftp",
     "cordova-plugin-iap": "file:src/plugins/iap",
@@ -130,7 +131,7 @@
     "escape-string-regexp": "^5.0.0",
     "esprima": "^4.0.1",
     "filesize": "^10.1.0",
-    "html-tag-js": "^1.3.0",
+    "html-tag-js": "^1.4.3",
     "js-base64": "^3.7.6",
     "jszip": "^3.10.1",
     "marked": "5.0.5",
