--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "clean": "sh utils/scripts/clean.sh android android@10",
     "plugin": "sh utils/scripts/plugin.sh",
     "setup": "node ./utils/setup.js",
+    "esbuild": "node ./utils/esbuild.mjs",
+    "esbuild:watch": "node ./utils/esbuild.mjs watch",
     "ionic:serve": "vite www"
   },
   "keywords": [
@@ -128,6 +130,7 @@
     "cordova": "12.0.0",
     "core-js": "^3.35.1",
     "crypto-js": "^4.2.0",
+    "esbuild-sass-plugin": "^3.2.0",
     "escape-string-regexp": "^5.0.0",
     "esprima": "^4.0.1",
     "filesize": "^10.1.0",
