--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
       "cordova-plugin-server": {},
       "cordova-plugin-iap": {},
       "cordova-plugin-ftp": {},
-      "cordova-plugin-browser": {},
       "cordova-plugin-sdcard": {},
       "cordova-plugin-consent": {},
       "@parrino/cordova-plugin-local-notifications": {},
@@ -44,7 +43,8 @@
       },
       "cordova-plugin-system": {},
       "cordova-plugin-browsersync-gen2": {},
-      "@red-mobile/nodejs-mobile-cordova": {}
+      "@red-mobile/nodejs-mobile-cordova": {},
+      "cordova-plugin-browser": {}
     },
     "platforms": []
   },
@@ -143,6 +143,7 @@
     "js-bridge": "file:../Programming/bridge/browser-bridge",
     "jszip": "^3.10.1",
     "lossless-json": "^4.0.1",
+    "markdown-it": "^14.1.0",
     "marked": "5.0.5",
     "marked-mangle": "^1.1.4",
     "mime-types": "^2.1.35",
@@ -151,6 +152,7 @@
     "npm": "^10.5.0",
     "url-parse": "^1.5.10",
     "vanilla-picker": "^2.12.2",
+    "xterm-addon-serialize": "^0.11.0",
     "yargs": "^17.7.2"
   },
   "browserslist": "cover 100%,not android < 5"
