fix: Fixed github workflow

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "cordova build android -- --jvmargs='-Xmx1536M --add-opens=java.base/java.io=ALL-UNNAMED'",
     "build": "sh utils/scripts/build.sh",
     "start": "sh utils/scripts/start.sh",
-    "clean": "sh utils/scripts/clean.sh android android@10",
+    "clean": "sh utils/scripts/clean.sh android android",
     "plugin": "sh utils/scripts/plugin.sh",
     "watch": "sh ./utils/scripts/watch.sh",
     "setup": "sh ./utils/scripts/setup.sh",
