fix: Fixed github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build Android
 
-on: [workflow_dispatch, release]
+on: 
+  - workflow_dispatch: true
+  - release:
+    types: [published]
 
 jobs:
   build:
