fix: Updated build.yml github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build Android
 
 on: 
-  - workflow_dispatch: true
-  - release:
+  workflow_dispatch: true
+  release:
     types: [published]
 
 jobs:
