--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build Android
 
-on: [release, workflow_dispatch]
+on: 
+  - workflow_dispatch
+  - push:
+    branches:
+      - personal
 
 jobs:
   build:
@@ -8,18 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '11' # only 11 works for this project 
+          distribution: 'oracle' # See 'Supported distributions' for available options
+          java-version: '16' # only 11 works for this project 
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 18
 
       - name: Setup Android NDK
         uses: nttld/setup-ndk@v1
@@ -60,7 +64,7 @@ jobs:
       - name: Upload dev APK
         uses: actions/upload-artifact@v3
         with:
-          name: acodenode-debug
+          name: acodenode-debug.zip
           path: ./*.apk
 
       # - name: Upload release bundle
@@ -68,3 +72,34 @@ jobs:
       #   with:
       #     name: app-release
       #     path: ./*.aab
+
+  release:
+    name: Upload Release Asset
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build project # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths acodenode-debug README.md
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./acodenode-debug.zip
+          asset_name: acodenode-debug.zip
+          asset_content_type: application/zip
