feat(build): Improved vite support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "baseUrl": "./src",
-    "paths": {
-
-    }
+    "jsx": "react-jsx",
+    "jsxImportSource": "html-tag-jsx"
   },
   "exclude": [
     "./dist/**/*",
