--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "admob-plus-cordova": "1.28.0",
     "autosize": "^6.0.1",
     "awesome-notifications": "^3.1.3",
-    "browser-bridge": "file:packages/browser-bridge",
+    "browser-bridge": "./packages/browser-bridge",
     "cheerio": "^1.0.0-rc.12",
     "cordova": "12.0.0",
     "core-js": "^3.35.1",
@@ -133,8 +133,9 @@
     "events": "^3.3.0",
     "filesize": "^10.1.0",
     "html-tag-js": "^1.4.3",
+    "html-tag-jsx": "./packages/html-tag-jsx/",
     "js-base64": "^3.7.6",
-    "js-bridge": "file:packages/browser-bridge",
+    "js-bridge": "./packages/browser-bridge",
     "jszip": "^3.10.1",
     "lossless-json": "^4.0.1",
     "markdown-it": "^14.1.0",
